Fixed issue with flippers on safari

--- a/css/panoform.css
+++ b/css/panoform.css
@@ -126,22 +126,27 @@ a {
 }
 
 .flipper {
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     transform: perspective(1000px);
     position: relative;
+    z-index: 0;
 }
 
 .flipper .front, .flipper .back {
     border-radius: .3rem;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .flipper:hover .front{
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
 .flipper:hover .back {
+    -webkit-transform: rotateY(360deg);
     transform: rotateY(360deg);
 }
 
@@ -233,7 +238,8 @@ section.gray {
     border-bottom: 1px solid #ddd;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
+    transform: translateZ(200px);
 }
 
 .header_container {
